<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:text="@string/profilo"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/medication_name"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:layout_below="@id/profile_name"
        android:text="@string/medicina"/>

    <TextView
        android:id="@+id/remaining_days"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_toEndOf="@id/profile_name"
        android:layout_toStartOf="@+id/check"
        android:layout_marginTop="25dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:text="@string/giorni_rimanenti"/>

    <ImageButton
        android:id="@+id/check"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/teal_700"
        android:background="@drawable/icons8_shopping_cart_100" />

</RelativeLayout>